<?xml version="1.0"?>
<package format="3">
  <name>ompl_tutorial</name>
  <version>4.0.0</version>
  <description>Helper functions for displaying and debugging MoveIt data in Rviz via published markers</description>

  <maintainer email="dave@picknik.ai">Dave Coleman</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ompl</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
